kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-app
  namespace: fitness
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fitness-app
  template:
    metadata:
      labels:
        app: fitness-app
    spec:
      containers:
        - name: fitness-app
          image: matej2345/fitness-tracking-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
