kubernetes/database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fitness-postgres
  namespace: fitness
spec:
  serviceName: fitness-postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: fitness-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: fitness-postgres-service
  namespace: fitness
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
