kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fitness-service
  namespace: fitness
spec:
  selector:
    app: fitness-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
